@@ -62,6 +62,9 @@
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<encoding>UTF-8</encoding>
+						<compilerArgs>
+							<arg>--enable-preview</arg>
+						</compilerArgs>
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.projectlombok</groupId>
@@ -86,6 +89,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
+						<argLine>--enable-preview</argLine>
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
@@ -100,6 +104,7 @@
 					<artifactId>maven-failsafe-plugin</artifactId>
 					<version>${maven-failsafe-plugin.version}</version>
 					<configuration>
+						<argLine>--enable-preview</argLine>
 						<includes>
 							<include>**/*IT.java</include>
 							<include>**/*AcceptanceTest.java</include>
@@ -118,6 +123,9 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring-boot.version}</version>
+					<configuration>
+						<jvmArguments>--enable-preview</jvmArguments>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>com.diffplug.spotless</groupId>
